added team page

--- a/app/views/ciphers/encryption.html.erb
+++ b/app/views/ciphers/encryption.html.erb
@@ -2,5 +2,6 @@
   <h1>Cipher Encryption</h1>
   <p>Sentence to encrypt: <%= @sentence %> </p>
   <p>Encrypted sentence: <%= @encrypted_sentence %></p>
-
+  <%= link_to "Home Page", root_path, class: "btn btn-primary" %>
+  <%= link_to "Team Page", team_path, class: "btn btn-primary" %>
 </div>
