--- a/app/views/ciphers/home.html.erb
+++ b/app/views/ciphers/home.html.erb
@@ -4,7 +4,12 @@
 
   <form action="/encrypt" method="get">
     <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-    <input type="text" name="sentence" value="">
+    <input type="text" name="sentence" value="We are just having fun">
     <input type="submit" class="btn btn-primary">
   </form>
+
+  <br>
+
+  <%= link_to "Home Page", root_path, class: "btn btn-primary" %>
+  <%= link_to "Team Page", team_path, class: "btn btn-primary" %>
 </div>
